Fix footer alignment

--- a/assets/css/error.scss
+++ b/assets/css/error.scss
@@ -65,3 +65,7 @@ sitemap:
 .error-button {
   font-size: 24px;
 }
+
+.footer {
+  text-align: center;
+}
